image change funcion added

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </header>
     <main class="main">
         <section id="o-mnie" class="main__section main__section--prime">
-            <img class="main__image" src="images/lukasz.jpg" alt="Łukasz Kołosowski" width="640" height="640">
+            <img class="main__image js-image" src="images/lukasz.jpg" alt="Łukasz Kołosowski" width="640" height="640">
         </section>
         <section class="main__section">
             <h2>Łukasz, <i class="main__subtext">25 lat</i></h2>
