arrow icons added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link href="css/style.css" rel="stylesheet" />
     <link href="css/header.css" rel="stylesheet" />
     <link href="css/main.css" rel="stylesheet" />
@@ -35,6 +41,8 @@
     </header>
     <main class="main">
       <section id="o-mnie" class="main__section main__section--prime">
+        <i class="main__arrow main__arrow--left fa-solid fa-chevron-left js-arrow"></i
+        ><i class="main__arrow main__arrow--right fa-solid fa-chevron-right js-arrow"></i>
         <img class="main__image js-image" src="images/lukasz.jpg" alt="Łukasz Kołosowski" width="640" height="640" />
       </section>
       <section class="main__section">
