open graph meta tags added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Łukasz Kołosowski - O Mnie</title>
+    <link rel="icon" href="images/icon.png" />
+    <meta property="og:title" content="Łukasz Kołosowski - O Mnie" />
+    <meta property="og:description" content="Cześć! Nazywam się Łukasz, jestem z Wrocławia i właśnie rozpoczynam naukę programowania w szkole YouCode. Zawsze marzyłem, żeby tworzyć strony
+    internetowe, dlatego postanowiłem dołączyć do tej społeczności :) Nie mogę doczekać się kolejnych lekcji." />
+    <meta property="og:image" content="https://lkkolosowski.github.io/homepage/images/share.png" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
