--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="Łukasz Kołosowski - O Mnie" />
     <meta property="og:description" content="Cześć! Nazywam się Łukasz, jestem z Wrocławia i właśnie rozpoczynam naukę programowania w szkole YouCode. Zawsze marzyłem, żeby tworzyć strony
     internetowe, dlatego postanowiłem dołączyć do tej społeczności :) Nie mogę doczekać się kolejnych lekcji." />
-    <meta property="og:image" content="https://lkkolosowski.github.io/homepage/images/share.png" />
+    <meta property="og:image" content="images/share-page.png" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
