update content of homepage

--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <html lang="pl">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <title>Łukasz Kołosowski - O Mnie</title>
     <link rel="icon" href="images/icon.png" />
     <meta property="og:title" content="Łukasz Kołosowski - O Mnie" />
-    <meta property="og:description" content="Cześć! Nazywam się Łukasz, jestem z Wrocławia i właśnie rozpoczynam naukę programowania w szkole YouCode. Zawsze marzyłem, żeby tworzyć strony
-    internetowe, dlatego postanowiłem dołączyć do tej społeczności :) Nie mogę doczekać się kolejnych lekcji." />
+    <meta
+      property="og:description"
+      content="Cześć! Nazywam się Łukasz, jestem z Wrocławia i właśnie rozpoczynam naukę programowania w szkole YouCode. Zawsze marzyłem, żeby tworzyć strony
+    internetowe, dlatego postanowiłem dołączyć do tej społeczności :) Nie mogę doczekać się kolejnych lekcji."
+    />
     <meta property="og:image" content="images/share-page.png" />
     <link
       rel="stylesheet"
@@ -26,8 +32,12 @@
     <link href="css/style.css" rel="stylesheet" />
     <link href="css/header.css" rel="stylesheet" />
     <link href="css/main.css" rel="stylesheet" />
+    <link href="css/map.css" rel="stylesheet" />
     <link href="css/footer.css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
     <script defer src="js/script.js"></script>
   </head>
 
@@ -36,53 +46,94 @@
       <nav class="header__navigation">
         <h1>Kim jestem</h1>
         <ul class="header__list">
-          <li class="header__item"><a class="header__link" href="#o-mnie">O mnie</a></li>
-          <li class="header__item"><a class="header__link" href="#podroze-male-i-duze">Podróże</a></li>
-          <li class="header__item"><a class="header__link" href="#rower">Rower</a></li>
-          <li class="header__item"><a class="header__link" href="#gory">Góry</a></li>
-          <li class="header__item"><a class="header__link" href="#najwyzsze-szczyty-w-polsce">Najwyższe szczyty</a></li>
+          <li class="header__item">
+            <a class="header__link" href="#o-mnie">O mnie</a>
+          </li>
+          <li class="header__item">
+            <a class="header__link" href="#podroze-male-i-duze">Podróże</a>
+          </li>
+          <li class="header__item">
+            <a class="header__link" href="#rower">Rower</a>
+          </li>
+          <li class="header__item">
+            <a class="header__link" href="#gory">Góry</a>
+          </li>
+          <li class="header__item">
+            <a class="header__link" href="#najwyzsze-szczyty-w-polsce"
+              >Najwyższe szczyty</a
+            >
+          </li>
         </ul>
       </nav>
     </header>
     <main class="main">
       <section id="o-mnie" class="main__section main__section--prime">
-        <i class="main__arrow main__arrow--left fa-solid fa-chevron-left js-arrow"></i
-        ><i class="main__arrow main__arrow--right fa-solid fa-chevron-right js-arrow"></i>
-        <img class="main__image js-image" src="images/lukasz.jpg" alt="Łukasz Kołosowski" width="640" height="640" />
+        <i
+          class="main__arrow main__arrow--left fa-solid fa-chevron-left js-arrow"
+        ></i
+        ><i
+          class="main__arrow main__arrow--right fa-solid fa-chevron-right js-arrow"
+        ></i>
+        <img
+          class="main__image js-image"
+          src="images/lukasz.jpg"
+          alt="Łukasz Kołosowski"
+          width="640"
+          height="640"
+        />
       </section>
       <section class="main__section">
         <h2>Łukasz, <i class="main__subtext">25 lat</i></h2>
         <p class="main__paragraph">
-          Cześć! Nazywam się Łukasz, jestem z Wrocławia i właśnie rozpoczynam naukę programowania w szkole YouCode. Zawsze marzyłem, żeby tworzyć strony
-          internetowe, dlatego postanowiłem dołączyć do tej społeczności :) Nie mogę doczekać się kolejnych lekcji.
-        </p>
-        <p class="main__paragraph">
-          Moją pasją w życiu są podróże <a class="main__link" href="#rower">rowerem</a>, szczególnie w dalekie trasy. Interesuję się gotowaniem, muzyką, oraz
-          lubię sobie też czasem na siłkę pochodzić.
+          Cześć! Nazywam się Łukasz, jestem z Wrocławia. Moją pasją w życiu
+          są podróże
+          <a class="main__link" href="#rower">rowerem</a>, szczególnie w
+          dalekie trasy. Interesuję się również programowaniem, muzyką,
+          oraz lubię sobie też czasem na siłkę pochodzić.
         </p>
       </section>
       <section id="podroze-male-i-duze" class="main__section">
         <h2>Podróże małe i duże</h2>
         <p class="main__paragraph">
-          W ładną pogodę nie usiedzę w domu. <br />W gorszą w sumie też nie :D Dobrze, że tak blisko mamy <a class="main__link" href="#gory">góry</a>, ponieważ
-          zawsze jakiś pomysł na wycieczkę się znajdzie. Czy to przejażdżka rowerowa, czy biwakowanie pod namiotem.
+          W ładną pogodę nie usiedzę w domu. W gorszą w sumie też nie :D
+          Dobrze, że tak blisko mamy
+          <a class="main__link" href="#gory">góry</a>, ponieważ zawsze
+          jakiś pomysł na wycieczkę się znajdzie. Czy to przejażdżka
+          rowerowa, czy biwakowanie pod namiotem.
         </p>
       </section>
       <section id="rower" class="main__section">
         <h2>Rower</h2>
         <p class="main__paragraph">
-          W życiu stawiam na minimalizm. Nie mam samochodu, ani motocykla. Posiadam rower szosowy, dlatego na co dzień (do pracy, do sklepu itp.) poruszam się
-          właśnie nim. W minionym roku moim największym osiągnięciem było dotarcie w jeden dzień na dwóch kołach z Wrocławia do Częstochowy.
+          Posiadam rower szosowy, i na co dzień poruszam się właśnie nim. W
+          minionym roku moim największym osiągnięciem było dotarcie w jeden
+          dzień na dwóch kołach z&nbsp;Wrocławia do Częstochowy.
+        </p>
+        <p class="main__paragraph">
+          <iframe
+            class="map"
+            src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d643073.1037114902!2d17.86783616864741!3d50.97911092007506!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e1!4m5!1s0x470fe9c2d4b58abf%3A0xb70956aec205e0f5!2zV3JvY8WCYXc!3m2!1d51.1078852!2d17.038537599999998!4m5!1s0x4710b5c54e2ca8af%3A0x854f0d4d1a178236!2sCz%C4%99stochowa!3m2!1d50.8118195!2d19.1203094!5e0!3m2!1spl!2spl!4v1679943997254!5m2!1spl!2spl"
+            height="250"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
         </p>
       </section>
       <section id="gory" class="main__section">
         <h2>Góry</h2>
         <p class="main__paragraph">
-          Jednym z moich celów jest zdobycie wszystkich najwyższych szczytów z każdego pasma górskiego w Polsce. Za sobą mam już pokonanie Śnieżki usytuowanej w
-          Karkonoszach. Wysokość 1603 m n.p.m. to prawdopodobnie najwyższa wysokość, na jakiej byłem :) Poniżej tabelka przedstawiająca pozostałe szczyty.
+          Jednym z moich celów jest zdobycie wszystkich najwyższych
+          szczytów z każdego pasma górskiego w Polsce. Za sobą mam już
+          pokonanie Śnieżki usytuowanej w&nbsp;Karkonoszach. Wysokość 1603
+          m n.p.m. to prawdopodobnie najwyższa wysokość, na jakiej byłem :)
+          Poniżej tabelka przedstawiająca pozostałe szczyty.
         </p>
       </section>
-      <section id="najwyzsze-szczyty-w-polsce" class="main__section main__section--expand">
+      <section
+        id="najwyzsze-szczyty-w-polsce"
+        class="main__section main__section--expand"
+      >
         <table class="main__table">
           <caption class="main__table-caption">
             Tabela najwyższych szczytów w Polsce
@@ -90,84 +141,122 @@
           </caption>
           <thead>
             <tr class="main__table-row">
-              <th class="main__table-cell main__table-header" scope="col">Pasmo górskie</th>
-              <th class="main__table-cell main__table-header" scope="col">Najwyższy szczyt</th>
-              <th class="main__table-cell main__table-header" scope="col">Wysokość (n.p.m.)</th>
+              <th class="main__table-cell main__table-header" scope="col">
+                Pasmo górskie
+              </th>
+              <th class="main__table-cell main__table-header" scope="col">
+                Najwyższy szczyt
+              </th>
+              <th class="main__table-cell main__table-header" scope="col">
+                Wysokość (n.p.m.)
+              </th>
             </tr>
           </thead>
           <tbody>
             <tr class="main__table-row">
-              <th class="main__table-cell main__table-header" scope="row">Tatry</th>
+              <th class="main__table-cell main__table-header" scope="row">
+                Tatry
+              </th>
               <td class="main__table-cell">Rysy</td>
               <td class="main__table-cell">2499</td>
             </tr>
             <tr class="main__table-row">
-              <th class="main__table-cell main__table-header" scope="row">Beskid Żywiecki</th>
+              <th class="main__table-cell main__table-header" scope="row">
+                Beskid Żywiecki
+              </th>
               <td class="main__table-cell">Babia Góra</td>
               <td class="main__table-cell">1725</td>
             </tr>
             <tr class="main__table-row">
-              <th class="main__table-cell main__table-header" scope="row">Karkonosze</th>
+              <th class="main__table-cell main__table-header" scope="row">
+                Karkonosze
+              </th>
               <td class="main__table-cell">Śnieżka</td>
               <td class="main__table-cell">1603</td>
             </tr>
             <tr class="main__table-row">
-              <th class="main__table-cell main__table-header" scope="row">Bieszczady</th>
+              <th class="main__table-cell main__table-header" scope="row">
+                Bieszczady
+              </th>
               <td class="main__table-cell">Tarnica</td>
               <td class="main__table-cell">1346</td>
             </tr>
             <tr class="main__table-row">
-              <th class="main__table-cell main__table-header" scope="row">Gorce</th>
+              <th class="main__table-cell main__table-header" scope="row">
+                Gorce
+              </th>
               <td class="main__table-cell">Turbacz</td>
               <td class="main__table-cell">1310</td>
             </tr>
             <tr class="main__table-row">
-              <th class="main__table-cell main__table-header" scope="row">Beskid Sądecki</th>
+              <th class="main__table-cell main__table-header" scope="row">
+                Beskid Sądecki
+              </th>
               <td class="main__table-cell">Radziejowa</td>
               <td class="main__table-cell">1262</td>
             </tr>
             <tr class="main__table-row">
-              <th class="main__table-cell main__table-header" scope="row">Beskid Śląski</th>
+              <th class="main__table-cell main__table-header" scope="row">
+                Beskid Śląski
+              </th>
               <td class="main__table-cell">Skrzyczne</td>
               <td class="main__table-cell">1257</td>
             </tr>
             <tr class="main__table-row">
-              <th class="main__table-cell main__table-header" scope="row">Beskid Wyspowy</th>
+              <th class="main__table-cell main__table-header" scope="row">
+                Beskid Wyspowy
+              </th>
               <td class="main__table-cell">Mogielica</td>
               <td class="main__table-cell">1170</td>
             </tr>
             <tr class="main__table-row">
-              <th class="main__table-cell main__table-header" scope="row">Góry Izerskie</th>
+              <th class="main__table-cell main__table-header" scope="row">
+                Góry Izerskie
+              </th>
               <td class="main__table-cell">Wysoka Kopa</td>
               <td class="main__table-cell">1126</td>
             </tr>
             <tr class="main__table-row">
-              <th class="main__table-cell main__table-header" scope="row">Góry Bialskie</th>
+              <th class="main__table-cell main__table-header" scope="row">
+                Góry Bialskie
+              </th>
               <td class="main__table-cell">Postawna</td>
               <td class="main__table-cell">1124</td>
             </tr>
             <tr class="main__table-row">
-              <th class="main__table-cell main__table-header" scope="row">Pieniny</th>
+              <th class="main__table-cell main__table-header" scope="row">
+                Pieniny
+              </th>
               <td class="main__table-cell">Wysoka</td>
               <td class="main__table-cell">1050</td>
             </tr>
             <tr class="main__table-row">
-              <th class="main__table-cell main__table-header" scope="row">Beskid Niski</th>
+              <th class="main__table-cell main__table-header" scope="row">
+                Beskid Niski
+              </th>
               <td class="main__table-cell">Lackowa</td>
               <td class="main__table-cell">997</td>
             </tr>
             <tr class="main__table-row">
-              <th class="main__table-cell main__table-header" scope="row">Ilość gór do zdobycia</th>
+              <th class="main__table-cell main__table-header" scope="row">
+                Ilość gór do zdobycia
+              </th>
               <td class="main__table-cell" colspan="2">999999999+</td>
             </tr>
           </tbody>
         </table>
-        <button class="main__button js-button"><span class="js-text">Ciemny</span> motyw</button>
+        <button class="main__button js-button">
+          <span class="js-text">Ciemny</span> motyw
+        </button>
       </section>
     </main>
     <footer class="footer">
       <section class="footer__section">
-        <p class="footer__paragraph">2022 - Prawa zastrzeżone<br /><i>Łukasz Kołosowski</i></p>
+        <p class="footer__paragraph">
+          2023 - Made with <span class="js-heart">🖤</span><br /><i
+            >Łukasz Kołosowski</i
+          >
+        </p>
       </section>
     </footer>
   </body>
