edit text of table header

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 Najwyższy szczyt
               </th>
               <th class="main__table-cell main__table-header" scope="col">
-                Wysokość (n.p.m.)
+                Wysokość (m n.p.m.)
               </th>
             </tr>
           </thead>
