--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <p class="main__paragraph">
           Jednym z moich celów jest zdobycie wszystkich najwyższych
           szczytów z każdego pasma górskiego w Polsce. Za sobą mam już
-          pokonanie Śnieżki usytuowanej w&nbsp;Karkonoszach. Wysokość 1603
+          pokonanie Kasprowego Wierchu usytuowanego w&nbsp;Tatrach. Wysokość 1987
           m n.p.m. to prawdopodobnie najwyższa wysokość, na jakiej byłem :)
           Poniżej tabelka przedstawiająca pozostałe szczyty.
         </p>
@@ -157,8 +157,8 @@
               <th class="main__table-cell main__table-header" scope="row">
                 Tatry
               </th>
-              <td class="main__table-cell">Rysy</td>
-              <td class="main__table-cell">2499</td>
+              <td class="main__table-cell">Kasprowy Wierch</td>
+              <td class="main__table-cell">1987</td>
             </tr>
             <tr class="main__table-row">
               <th class="main__table-cell main__table-header" scope="row">
