--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>Łukasz Kołosowski - O Mnie</title>
-    <link rel="icon" href="images/icon.png" />
+    <link rel="icon" href="icon128.png" />
     <meta property="og:title" content="Łukasz Kołosowski - O Mnie" />
     <meta
       property="og:description"
