add calculated age to application

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         />
       </section>
       <section class="main__section">
-        <h2>Łukasz, <i class="main__subtext">25 lat</i></h2>
+        <h2>Łukasz, <i class="main__subtext"><span class="js-age"></span> lat</i></h2>
         <p class="main__paragraph">
           Cześć! Nazywam się Łukasz, jestem z Wrocławia. Moją pasją w życiu
           są podróże
