update article text

--- a/index.html
+++ b/index.html
@@ -124,10 +124,8 @@
         <h2>Góry</h2>
         <p class="main__paragraph">
           Jednym z moich celów jest zdobycie wszystkich najwyższych
-          szczytów z każdego pasma górskiego w Polsce. Za sobą mam już
-          pokonanie Kasprowego Wierchu usytuowanego w&nbsp;Tatrach. Wysokość 1987
-          m n.p.m. to prawdopodobnie najwyższa wysokość, na jakiej byłem :)
-          Poniżej tabelka przedstawiająca pozostałe szczyty.
+          szczytów z każdego pasma górskiego w Polsce. W tym roku marzy mi się wejście na dach Polski - Rysy, szczyt usytuowany w&nbsp;Tatrach. W ramach przygotowań do tego wyczynu postanowiłem spróbować swoich sił we wdrapaniu się zdaniem wielu na jeden z najpiękniejszych tatrzańskich szczytów w Tatrach Wysokich, a mianowicie na Kościelec :D Była to wspinaczka momentami bardzo stroma, z kilkoma miejscami budzącymi grozę. Pierwszy raz miałem styczność z tak inną górą od tych, na które dotychczas wchodziłem, ale wiem, że taka górka to tylko zwiastun tego co czeka mnie wyżej :DD Wysokość Kościelca czyli 2155 m n.p.m. to prawdopodobnie najwyższa wysokość, na jakiej byłem :)
+          Poniżej tabelka przedstawiająca szczyty do zdobycia za mojego życia.
         </p>
       </section>
       <section
@@ -157,8 +155,8 @@
               <th class="main__table-cell main__table-header" scope="row">
                 Tatry
               </th>
-              <td class="main__table-cell">Kasprowy Wierch</td>
-              <td class="main__table-cell">1987</td>
+              <td class="main__table-cell">Rysy</td>
+              <td class="main__table-cell">2499</td>
             </tr>
             <tr class="main__table-row">
               <th class="main__table-cell main__table-header" scope="row">
