--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <html lang="pl">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Łukasz Kołosowski - O Mnie</title>
     <link rel="icon" href="icon128.png" />
     <meta property="og:title" content="Łukasz Kołosowski - O Mnie" />
@@ -83,23 +80,25 @@
         />
       </section>
       <section class="main__section">
-        <h2>Łukasz, <i class="main__subtext"><span class="js-age"></span> lat</i></h2>
+        <h2>
+          Łukasz, <i class="main__subtext"><span class="js-age"></span> lat</i>
+        </h2>
         <p class="main__paragraph">
-          Cześć! Nazywam się Łukasz, jestem z Wrocławia. Moją pasją w życiu
-          są podróże
-          <a class="main__link" href="#rower">rowerem</a>, szczególnie w
-          dalekie trasy. Interesuję się również programowaniem, muzyką,
-          oraz lubię sobie też czasem na siłkę pochodzić.
+          Cześć! Nazywam się Łukasz, jestem z Wrocławia. Moją pasją w życiu są
+          podróże
+          <a class="main__link" href="#rower">rowerem</a>, szczególnie w dalekie
+          trasy. Interesuję się również programowaniem, muzyką, oraz lubię sobie
+          też czasem na siłkę pochodzić.
         </p>
       </section>
       <section id="podroze-male-i-duze" class="main__section">
         <h2>Podróże małe i duże</h2>
         <p class="main__paragraph">
-          W ładną pogodę nie usiedzę w domu. W gorszą w sumie też nie :D
-          Dobrze, że tak blisko mamy
-          <a class="main__link" href="#gory">góry</a>, ponieważ zawsze
-          jakiś pomysł na wycieczkę się znajdzie. Czy to przejażdżka
-          rowerowa, czy biwakowanie pod namiotem.
+          W ładną pogodę nie usiedzę w domu. W gorszą w sumie też nie :D Dobrze,
+          że tak blisko mamy
+          <a class="main__link" href="#gory">góry</a>, ponieważ zawsze jakiś
+          pomysł na wycieczkę się znajdzie. Czy to przejażdżka rowerowa, czy
+          biwakowanie pod namiotem.
         </p>
       </section>
       <section id="rower" class="main__section">
@@ -123,9 +122,18 @@
       <section id="gory" class="main__section">
         <h2>Góry</h2>
         <p class="main__paragraph">
-          Jednym z moich celów jest zdobycie wszystkich najwyższych
-          szczytów z każdego pasma górskiego w Polsce. W tym roku marzy mi się wejście na dach Polski - Rysy, szczyt usytuowany w&nbsp;Tatrach. W ramach przygotowań do tego wyczynu postanowiłem spróbować swoich sił we wdrapaniu się zdaniem wielu na jeden z najpiękniejszych tatrzańskich szczytów w Tatrach Wysokich, a mianowicie na Kościelec :D Była to wspinaczka momentami bardzo stroma, z kilkoma miejscami budzącymi grozę. Pierwszy raz miałem styczność z tak inną górą od tych, na które dotychczas wchodziłem, ale wiem, że taka górka to tylko zwiastun tego co czeka mnie wyżej :DD Wysokość Kościelca czyli 2155 m n.p.m. to prawdopodobnie najwyższa wysokość, na jakiej byłem :)
-          Poniżej tabelka przedstawiająca szczyty do zdobycia za mojego życia.
+          Jednym z moich celów jest zdobycie wszystkich najwyższych szczytów z
+          każdego pasma górskiego w Polsce. W tym roku marzy mi się wejście na
+          dach Polski - Rysy, szczyt usytuowany w&nbsp;Tatrach. W ramach
+          przygotowań do tego wyczynu postanowiłem spróbować swoich sił we
+          wdrapaniu się zdaniem wielu na jeden z najpiękniejszych tatrzańskich
+          szczytów w Tatrach Wysokich, a mianowicie na Kościelec :D Była to
+          wspinaczka momentami bardzo stroma, z kilkoma miejscami budzącymi
+          grozę. Pierwszy raz miałem styczność z tak inną górą od tych, na które
+          dotychczas wchodziłem, ale wiem, że taka górka to tylko zwiastun tego
+          co czeka mnie wyżej :DD Wysokość Kościelca czyli 2155 m n.p.m. to
+          prawdopodobnie najwyższa wysokość, na jakiej byłem :) <br />
+          Poniżej tabelka przedstawiająca szczyty do zdobycia
         </p>
       </section>
       <section
