add paragraph to article

--- a/index.html
+++ b/index.html
@@ -132,8 +132,10 @@
           grozę. Pierwszy raz miałem styczność z tak inną górą od tych, na które
           dotychczas wchodziłem, ale wiem, że taka górka to tylko zwiastun tego
           co czeka mnie wyżej :DD Wysokość Kościelca czyli 2155 m n.p.m. to
-          prawdopodobnie najwyższa wysokość, na jakiej byłem :) <br />
-          Poniżej tabelka przedstawiająca szczyty do zdobycia
+          prawdopodobnie najwyższa wysokość, na jakiej byłem :)
+        </p>
+        <p class="main__paragraph">
+          Poniżej tabelka przedstawiająca szczyty do zdobycia.
         </p>
       </section>
       <section
